# sdr2

./: .gitmodules  CMakeLists.txt  README.md  i2s.pio  main.cpp  si5351.c  si5351.h  sweeper.cpp  sweeper.h
hw/audio-breakout/: adc.kicad_sch  audio-breakout.kicad_pcb  audio-breakout.kicad_prl  audio-breakout.kicad_pro  audio-breakout.kicad_sch  dac.kicad_sch
hw/bpf-1/: .gitignore  bpf-1.kicad_pcb  bpf-1.kicad_prl  bpf-1.kicad_pro  bpf-1.kicad_sch
hw/kc1fsz-rx6/: .gitignore  kc1fsz-rx6.kicad_pcb  kc1fsz-rx6.kicad_prl  kc1fsz-rx6.kicad_pro  kc1fsz-rx6.kicad_sch
hw/kc1fsz-rx7/: .gitignore  kc1fsz-rx7.kicad_pcb  kc1fsz-rx7.kicad_prl  kc1fsz-rx7.kicad_pro  kc1fsz-rx7.kicad_sch  kc1fsz-rx7.kicad_sch-bak
hw/tx-1/: qse-mux.kicad_sch  qse.kicad_sch  tx-1.kicad_pcb  tx-1.kicad_prl  tx-1.kicad_pro  tx-1.kicad_sch
hw/txrx-1/: clock.kicad_sch  qse-mux.kicad_sch  rx.kicad_sch  tx-qse.kicad_sch  tx.kicad_sch  txrx-1.kicad_pcb  txrx-1.kicad_prl  txrx-1.kicad_pro  txrx-1.kicad_sch
hw/util-1/: audio-in.kicad_sch  audio-out.kicad_sch  power.kicad_sch  util-1.kicad_pcb  util-1.kicad_prl  util-1.kicad_pro  util-1.kicad_sch
